--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.gachon.innergation">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +19,10 @@
         android:theme="@style/Theme.InnerGation"
         tools:targetApi="31">
         <activity
-            android:name=".activity.FindActivity"
+            android:name=".activity.FindActivity_four"
+            android:exported="false" />
+        <activity
+            android:name=".activity.FindActivity_five"
             android:exported="false" />
         <activity
             android:name=".activity.GetDataActivity"
